--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.url=jdbc:hsqldb:hsql://127.0.0.1:9001/tpprogcomp;create=true
+spring.datasource.url=jdbc:hsqldb:hsql://tp-database:9001/tpprogcomp;create=true
 spring.datasource.username=SA
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
